--- a/HappyInteview/index.html
+++ b/HappyInteview/index.html
@@ -85,6 +85,48 @@
                     </p>
                     
                  </li>
+                 <h3>Array method for modification and iteration</h3>
+                 <li>
+                    <h3>Map method</h3>
+                    <p>map() method is used when you want to modify each element of an array and create a new array with the modifies values. </p>
+                 </li>
+                 <li>
+                    <h3>forEach method</h3>
+                    <p>forEach() method is used when you want to perform some operation on each element of an array without creating a new array</p>
+                 </li>
+                 <li>
+                    <h3>What is DOM?</h3>
+                    <p>The DOM (Document object model) represents the web page as a <b>tree-like structure</b> that allows JS to dynamically access and manipulate the content and structure of a web page. </p>
+                 </li>
+                 <li>
+                    <h3>What are selectors</h3>
+                    <p>Selectors in js help to <b> get specific elements from DOM</b> based on IDs, class name and tag names. </p>
+                    <p>DOM Selector methods</p>
+                    <ul>
+                        <li>getElementById(): select single element </li>
+                        <li>getElementsByClassName(): select multiple elements that share the same class name </li>
+                        <li>getElementsByTagName():: select multiple elements based on tag name </li>
+                        <li>querySelector() </li>
+                        <li>querySelectorAll() </li>
+
+                    </ul> 
+                 </li>
+                 <li>
+                    <h3>Array like Object</h3>
+                    <p> It has few similar properly like array such as length and index. it does not have push , pop and other arrays method.</p> 
+                 </li>
+                 <li>
+                    <h3>Asynchronous Programming</h3>
+                    <p>Asynchronous Programming allows multiple tasks or operations to be initiated and executed concurrently.</p> 
+                    <p>Asynchronous operations <b>do not block</b>do not block the execution of the code.</p> 
+
+                 </li>
+                 <li>
+                    <h3>Array destructuring</h3>
+                    <p>Array destructuring allows you to extract elements from an array and assign them to individual variable in single statement.</p> 
+                    <p>const fruits=['apple','mango','orange']</p>
+                    <p> Array destructurig: const [firstFruit, secondFruit, thirdFruit]=fruits</p>
+                 </li>
             </ul>
         </div>
     </body>
